// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Modal
  onRequestClose={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.2)",
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  visible={true}
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,0.1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={1}
      focusedOpacity={0.7}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#e3e5e6",
          "height": 400.2,
          "left": 281.25,
          "position": "absolute",
          "top": 500.25,
          "width": 187.5,
        }
      }
    >
      <RowNB
        size={0.5}
        style={
          Object {
            "alignItems": "flex-start",
            "justifyContent": "flex-end",
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#3f3f48",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
              Object {
                "backgroundColor": "transparent",
                "marginLeft": 18,
                "marginTop": 0,
              },
            ]
          }
        >
          <Icon
            allowFontScaling={false}
            color="#313138"
            name="close"
            size={20}
          />
        </TouchableOpacity>
      </RowNB>
      <RowNB
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <ColumnNB>
          <RowNB>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontFamily": "Gotham-Book",
                    "fontSize": 14,
                  },
                  Object {
                    "color": "#313138",
                    "textAlign": "left",
                  },
                ]
              }
            >
              This ticket line contains 
              1
               unit
              :
            </Text>
          </RowNB>
          <RowNB>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontFamily": "Gotham-Book",
                    "fontSize": 14,
                  },
                  Object {
                    "color": "#313138",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Select amount of units to refund:
            </Text>
          </RowNB>
          <RowNB>
            <AmountControl
              maxAmount={1}
            />
          </RowNB>
        </ColumnNB>
      </RowNB>
      <RowNB
        style={
          Object {
            "alignItems": "flex-end",
            "justifyContent": "flex-end",
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#404048",
                "justifyContent": "center",
                "width": "34%",
              },
              Object {
                "backgroundColor": "#2dab61",
                "height": 45,
                "width": "50%",
              },
              Object {
                "backgroundColor": "transparent",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#fff",
                  "fontFamily": "Gotham-Book",
                  "fontSize": 14,
                },
                Object {
                  "color": "#313138",
                  "fontSize": 13,
                },
              ]
            }
          >
            CANCEL
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#404048",
                "justifyContent": "center",
                "width": "34%",
              },
              Object {
                "backgroundColor": "#2dab61",
                "height": 45,
                "width": "50%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#fff",
                  "fontFamily": "Gotham-Book",
                  "fontSize": 14,
                },
                Object {
                  "fontSize": 13,
                },
              ]
            }
          >
            OK
          </Text>
        </TouchableOpacity>
      </RowNB>
    </TouchableOpacity>
  </TouchableOpacity>
</Modal>
`;

exports[`renders correctly with multiple units) 1`] = `
<Modal
  onRequestClose={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.2)",
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  visible={true}
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,0.1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={1}
      focusedOpacity={0.7}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#e3e5e6",
          "height": 400.2,
          "left": 281.25,
          "position": "absolute",
          "top": 500.25,
          "width": 187.5,
        }
      }
    >
      <RowNB
        size={0.5}
        style={
          Object {
            "alignItems": "flex-start",
            "justifyContent": "flex-end",
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#3f3f48",
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
              Object {
                "backgroundColor": "transparent",
                "marginLeft": 18,
                "marginTop": 0,
              },
            ]
          }
        >
          <Icon
            allowFontScaling={false}
            color="#313138"
            name="close"
            size={20}
          />
        </TouchableOpacity>
      </RowNB>
      <RowNB
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <ColumnNB>
          <RowNB>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontFamily": "Gotham-Book",
                    "fontSize": 14,
                  },
                  Object {
                    "color": "#313138",
                    "textAlign": "left",
                  },
                ]
              }
            >
              This ticket line contains 
              2
               unit
              s
              :
            </Text>
          </RowNB>
          <RowNB>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontFamily": "Gotham-Book",
                    "fontSize": 14,
                  },
                  Object {
                    "color": "#313138",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Select amount of units to refund:
            </Text>
          </RowNB>
          <RowNB>
            <AmountControl
              maxAmount={2}
            />
          </RowNB>
        </ColumnNB>
      </RowNB>
      <RowNB
        style={
          Object {
            "alignItems": "flex-end",
            "justifyContent": "flex-end",
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#404048",
                "justifyContent": "center",
                "width": "34%",
              },
              Object {
                "backgroundColor": "#2dab61",
                "height": 45,
                "width": "50%",
              },
              Object {
                "backgroundColor": "transparent",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#fff",
                  "fontFamily": "Gotham-Book",
                  "fontSize": 14,
                },
                Object {
                  "color": "#313138",
                  "fontSize": 13,
                },
              ]
            }
          >
            CANCEL
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#404048",
                "justifyContent": "center",
                "width": "34%",
              },
              Object {
                "backgroundColor": "#2dab61",
                "height": 45,
                "width": "50%",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#fff",
                  "fontFamily": "Gotham-Book",
                  "fontSize": 14,
                },
                Object {
                  "fontSize": 13,
                },
              ]
            }
          >
            OK
          </Text>
        </TouchableOpacity>
      </RowNB>
    </TouchableOpacity>
  </TouchableOpacity>
</Modal>
`;
